--- a/css/styles.css
+++ b/css/styles.css
@@ -6,25 +6,23 @@
 
 body {
   background-color: var(--blanco);
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 /**Clases Globales**/
 .g-tituloPrincipal {
   margin-top: 88px;
   font-size: 57px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   text-align: center;
   line-height: 4rem;
 }
-
 @media (max-width: 828px) {
   .g-tituloPrincipal {
     margin-top: 44px;
     font-size: 36px;
   }
 }
-
 @media (max-width: 551px) {
   .g-tituloPrincipal {
     font-size: 32px;
@@ -33,9 +31,8 @@ body {
 
 .g-tituloSeccion {
   font-size: 45px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 828px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -44,10 +41,9 @@ body {
 
 .g-tituloCards {
   font-size: 32px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
 }
-
 @media (max-width: 828px) {
   .g-tituloCards {
     font-size: 24px;
@@ -58,12 +54,12 @@ body {
 .g-button {
   color: #ffffff;
   background-color: #3FAF67;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 800;
   text-transform: uppercase;
   border: none;
   border-radius: 5px;
-  padding: .75em 3em;
+  padding: 0.75em 3em;
   margin: 5px 0;
   text-decoration: none;
   cursor: pointer;
@@ -103,17 +99,15 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .g-coordinemos-container > * {
   margin: 15px 0;
 }
-
 .g-coordinemos-container > .g-button {
   padding-top: 8px;
 }
 
 /**Mixins y extends**/
-#introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-servicios #contacto {
+#p-servicios #contacto, #p-servicios #renovar, #p-servicios #arquitecturaGeneral, #p-servicios #principalServicios, #proyectos, #introProyectos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,7 +123,7 @@ body {
 
 /**Nav**/
 nav .cajaNav {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   display: -webkit-box;
@@ -141,7 +135,6 @@ nav .cajaNav {
   -webkit-box-shadow: 4px 4px whitesmoke;
           box-shadow: 4px 4px whitesmoke;
 }
-
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
   display: -webkit-box;
@@ -159,7 +152,6 @@ nav .cajaNav .barNav {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
-
 nav .cajaNav .barNav li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -170,17 +162,14 @@ nav .cajaNav .barNav li {
   padding: 0 20px;
   height: 100%;
 }
-
 nav .cajaNav .barNav li:hover {
   cursor: pointer;
 }
-
 nav .cajaNav .barNav li a {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
-
 nav .cajaNav .titNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -195,16 +184,13 @@ nav .cajaNav .titNav {
   height: auto;
   width: 348px;
 }
-
 nav .cajaNav .titNav .toggle {
   display: none;
 }
-
 nav .cajaNav .titNav img {
   width: 123px;
   height: auto;
 }
-
 nav .cajaNav .botones {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -217,20 +203,16 @@ nav .cajaNav .botones {
           align-items: center;
   width: 340px;
 }
-
 nav .cajaNav .botones a {
   text-decoration: none;
   margin: 0 40px 0 0;
 }
-
 nav .cajaNav .toggle {
   display: none;
 }
-
 nav .navB {
   display: none;
 }
-
 @media (max-width: 992px) {
   nav {
     display: -webkit-box;
@@ -254,7 +236,7 @@ nav .navB {
         -ms-flex-align: center;
             align-items: center;
     background-color: #f2ecde;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: 18px;
   }
@@ -335,12 +317,10 @@ nav .navB {
           justify-content: center;
   text-align: center;
 }
-
 #p-index #landing p {
   padding: 10px;
   margin: 20px 0;
 }
-
 #p-index #landing img {
   margin: 20px 0;
   width: 100%;
@@ -352,11 +332,9 @@ nav .navB {
 #introProyectos h2 {
   margin: 31px 0 72px 0;
 }
-
 #introProyectos p {
   margin: 20px;
 }
-
 #introProyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -368,7 +346,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #introProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -382,20 +359,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #introProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #introProyectos .contenedorCards .cards {
     max-width: 256px;
   }
 }
-
 @media (max-width: 828px) {
   #introProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -408,7 +382,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #introProyectos .contenedorCards {
     display: -webkit-box;
@@ -423,19 +396,15 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #introProyectos .contenedorCards h5 {
   margin-top: 20px;
 }
-
 #introProyectos .contenedorCards .card1 {
   margin-top: 192px;
 }
-
 #introProyectos .contenedorCards .card3 {
   margin-top: 120px;
 }
-
 @media (max-width: 827px) {
   #introProyectos .contenedorCards .card1, #introProyectos .contenedorCards .card3 {
     margin-top: 0;
@@ -446,21 +415,17 @@ nav .navB {
 #proyectos h1 {
   margin-bottom: 48px;
 }
-
 #proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
 }
-
 #proyectos a {
   text-decoration: none;
   color: #000;
 }
-
 #proyectos a:visited {
   color: #000;
 }
-
 #proyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -478,7 +443,6 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #proyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -492,20 +456,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #proyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #proyectos .contenedorCards .cards {
     max-width: 256px;
   }
 }
-
 @media (max-width: 828px) {
   #proyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -518,7 +479,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #proyectos .contenedorCards {
     display: -webkit-box;
@@ -533,30 +493,24 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #proyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
-
 #proyectos .contenedorCards .card5 {
   margin-top: -70px;
 }
-
 #proyectos .contenedorCards .card1, #proyectos .contenedorCards .card4 {
   margin-top: 106px;
 }
-
 #proyectos .contenedorCards .card3, #proyectos .contenedorCards .card6 {
   margin-top: 42px;
 }
-
 #proyectos .contenedorCards .underline {
   font-size: 18px;
   font-weight: 400;
   color: #3FAF67;
   text-decoration: underline;
 }
-
 @media (max-width: 827px) {
   #proyectos .contenedorCards .cards {
     margin-top: 0;
@@ -567,7 +521,6 @@ nav .navB {
 #p-servicios #principalServicios h1 {
   margin-bottom: 28px;
 }
-
 #p-servicios #principalServicios img {
   width: 100%;
   height: auto;
@@ -576,29 +529,24 @@ nav .navB {
   max-height: 424px;
   margin: 30px 0 67px 0;
 }
-
 #p-servicios #principalServicios .textBox {
   margin: 26px 390px 25px 390px;
 }
-
 @media (max-width: 1310px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 200px 25px 200px;
   }
 }
-
 @media (max-width: 1040px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 100px 25px 100px;
   }
 }
-
 @media (max-width: 700px) {
   #p-servicios #principalServicios .textBox {
     margin: 26px 20px 25px 20px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -610,7 +558,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -624,20 +571,17 @@ nav .navB {
   height: auto;
   padding: 10px;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #principalServicios .contenedorCards .cards {
     max-width: 190px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards {
     -webkit-box-pack: center;
@@ -650,7 +594,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards {
     display: -webkit-box;
@@ -665,27 +608,22 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .cardImg {
   margin-bottom: 21px;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
   margin-top: 160px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
     margin-top: 0;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor {
     -webkit-box-orient: vertical;
@@ -694,16 +632,13 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-servicios #arquitecturaGeneral {
   background-color: #F2ECDE;
   padding: 60px;
 }
-
 #p-servicios #arquitecturaGeneral h2 {
   margin-bottom: 56px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -713,32 +648,27 @@ nav .navB {
           align-items: center;
   text-align: start;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
   width: 100%;
   height: auto;
   max-width: 508px;
   margin-right: 10px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura p {
   width: 100%;
   height: auto;
   max-width: 508px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
@@ -755,7 +685,6 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -768,7 +697,6 @@ nav .navB {
       flex-wrap: nowrap;
   margin-top: 48px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -776,7 +704,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen img {
   max-width: 508px;
   width: 100%;
@@ -785,17 +712,14 @@ nav .navB {
      object-fit: cover;
   padding: 10px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen :first-child {
   margin-top: 104px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #renovar .imagen .contenedorImagen img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -804,7 +728,6 @@ nav .navB {
     max-width: 352px;
   }
 }
-
 @media (max-width: 740px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -813,7 +736,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
@@ -834,28 +756,23 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .texto :first-child {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
   margin: 102px 0 24px 0;
 }
-
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
 }
-
 #p-servicios #contacto {
   background: #F2ECDE;
 }
-
 #p-servicios #contacto :first-child {
   margin: 106px 0 11px 0;
 }
-
 #p-servicios #contacto :last-child {
   margin: 35px 0 129px 0;
 }
@@ -873,11 +790,9 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #p-nosotros main {
   padding: 0 20px;
 }
-
 #p-nosotros #landing {
   width: 100%;
   display: -webkit-box;
@@ -894,18 +809,15 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #p-nosotros #landing h1 {
   line-height: normal;
 }
-
 #p-nosotros #landing img {
   margin: 50px 0;
   width: 100%;
   max-width: 1040px;
   height: auto;
 }
-
 #p-nosotros #sobreNosotros {
   width: 100%;
   display: -webkit-box;
@@ -922,7 +834,6 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #p-nosotros #sobreNosotros .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -933,7 +844,6 @@ nav .navB {
           flex-direction: row;
   margin: 50px 0;
 }
-
 @media (max-width: 600px) {
   #p-nosotros #sobreNosotros .container {
     -webkit-box-orient: vertical;
@@ -942,7 +852,6 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-nosotros #sobreNosotros .container-left, #p-nosotros #sobreNosotros .container-right {
   width: 50%;
   display: -webkit-box;
@@ -959,24 +868,20 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 @media (max-width: 600px) {
   #p-nosotros #sobreNosotros .container-left, #p-nosotros #sobreNosotros .container-right {
     width: 100%;
   }
 }
-
 #p-nosotros #sobreNosotros .container-right p {
   padding: 0 15%;
 }
-
 @media (max-width: 600px) {
   #p-nosotros #sobreNosotros .container-right p {
     padding: 0;
     margin-top: 15px;
   }
 }
-
 #p-nosotros #sobreNosotros .container-left img {
   max-width: 250px;
 }
@@ -995,7 +900,6 @@ footer {
   height: 248px;
   font-size: 16px;
 }
-
 footer :first-child {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1005,18 +909,15 @@ footer :first-child {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 footer :first-child img {
   max-width: 76px;
   width: 100%;
   height: auto;
   margin-bottom: 9px;
 }
-
 footer :first-child p {
   line-height: 24px;
 }
-
 footer :nth-child(2) {
   font-size: 14px;
   display: -webkit-box;
@@ -1027,21 +928,17 @@ footer :nth-child(2) {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 footer :nth-child(2) a {
   text-decoration: none;
   color: #000;
   margin: 12px 0 12px 0;
 }
-
 footer :last-child p {
   margin-bottom: 9px;
 }
-
 footer :last-child :nth-child(2), footer :last-child :last-child {
   font-size: 14px;
 }
-
 @media (max-width: 828px) {
   footer {
     -webkit-box-orient: vertical;
@@ -1054,5 +951,4 @@ footer :last-child :nth-child(2), footer :last-child :last-child {
     margin: 32px 0px 18px 31px;
     height: 504px;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
