--- a/scss/proyectos.scss
+++ b/scss/proyectos.scss
@@ -103,7 +103,7 @@ body {
             }
 
             .ubicacion {
-                margin: 20px 0;
+                margin-bottom: 20px;
             }
 
             .descripcion {
