agregue img en mejor calidad, deje comentado

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -85,6 +85,18 @@ body {
     }
 }
 
+.g-contacto{
+    width: 100%;
+    @extend %flexContainer;
+    background: $bgCrema;
+    :first-child{
+        margin: 100px 0 11px 0;
+    }
+    :last-child{
+        margin: 35px 0 120px 0;
+    }
+}
+
 /**Mixins y extends**/
 
 %flexContainer{
@@ -199,7 +211,7 @@ nav{
         display: none;
     }
 
-    @media (max-width: 992px){
+    @media (max-width: 828px){
         display: flex;
         flex-direction: column;
        .navB{
@@ -531,16 +543,6 @@ nav{
                 margin-bottom: 120px;
             }    
         }      
-    }
-    #contacto{
-        @extend %flexContainer;
-        background: $bgCrema;
-        :first-child{
-            margin: 106px 0 11px 0;
-        }
-        :last-child{
-            margin: 35px 0 129px 0;
-        }
     }
 }
 
