--- a/css/styles.css
+++ b/css/styles.css
@@ -112,8 +112,21 @@ body {
   padding-top: 8px;
 }
 
+.g-contacto {
+  width: 100%;
+  background: #F2ECDE;
+}
+
+.g-contacto :first-child {
+  margin: 100px 0 11px 0;
+}
+
+.g-contacto :last-child {
+  margin: 35px 0 120px 0;
+}
+
 /**Mixins y extends**/
-#introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-servicios #contacto {
+.g-contacto, #introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -231,7 +244,7 @@ nav .navB {
   display: none;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 828px) {
   nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -850,18 +863,6 @@ nav .navB {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
-}
-
-#p-servicios #contacto {
-  background: #F2ECDE;
-}
-
-#p-servicios #contacto :first-child {
-  margin: 106px 0 11px 0;
-}
-
-#p-servicios #contacto :last-child {
-  margin: 35px 0 129px 0;
 }
 
 /**Nosotros**/
