--- a/scss/proyectos.scss
+++ b/scss/proyectos.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "styles";
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700;800&family=Playfair+Display:wght@700&family=Raleway:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700;800&family=Playfair+Display:wght@400;700&display=swap');
 
 * {
     margin: 0;
